# tparser

./: stack.yaml  tparser.cabal
src/: Main.hs
